# Ahmat-Samit96-homework-3

labs_src/: CMakeLists.txt
labs_src/lab3/: AlgoritmCommon.cpp  AlgoritmCommon.h  AlgoritmSingle.cpp  AlgoritmSingle.h  BackUp.cpp  BackUp.h  BackupJob.cpp  BackupJob.h  CMakeLists.txt  JobObject.cpp  JobObject.h  JobObjects.cpp  JobObjects.h  Repository.cpp  Repository.h  SubjectCommon.cpp  SubjectCommon.h  SubjectSingle.cpp  SubjectSingle.h  backup.cpp  backup.h  backupjob.cpp  backupjob.h
labs_tests/: lab3_tests.cpp
